# xfce4-toggle-plugin

./: .gitignore  AUTHORS  README
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  toggle-dialogs.c  toggle-dialogs.h  toggle.c  toggle.desktop.in  toggle.h
po/: POTFILES.in
